--- a/src/app/base/less/base.less
+++ b/src/app/base/less/base.less
@@ -129,6 +129,7 @@ ul li{
 .logo {
 	float:left;
 	width:17%;
+	min-width:15%;
 	a {
 		display:inline-table;
 		float:left;
@@ -1802,6 +1803,37 @@ input[type=number]::-webkit-outer-spin-button {
     color: #fff;
 }
 
+.back-common{
+	a{
+		position: relative;
+		background-color: @primary-color;
+		border-radius: 0;
+		border-color: #a576ca;
+		margin-top: 20px;
+		margin-left: 13px;
+		border: none;
+		transition: all 0.4s ease-out;
+		padding: 8px 25px;
+		text-decoration:none;
+		color:@color0;
+		 &:before{
+			content: "";
+			border: 16px solid #fff;
+			background: inherit;
+			position: absolute;
+			top: 0px;
+			left: -30px;
+			border-right-color: #a576ca;
+		 }
+		&:hover{
+			color:@color0;
+		}
+	}
+}
 
-
-
+.modal-backdrop{
+	z-index: 9998 !important;
+}
+.modal-dialog, .modal{
+	z-index: 9999 !important;
+}
