--- a/src/app/checkout/less/checkout.less
+++ b/src/app/checkout/less/checkout.less
@@ -9,7 +9,7 @@ input[type="number"],input[type="text"],input[type="email"],textarea,input[type=
 				
 }
 input.error, .errorMMyy {
-    border: 1px solid red !important;
+    border: 1px solid #f32929 !important;
 }
 #CheckoutTopNav{
 		
@@ -58,7 +58,7 @@ input.error, .errorMMyy {
 .checkoutfooter{
 	height: 50px;
     text-align: right;
-    z-index: 9999;
+    z-index: 9998;
     position: absolute;
     bottom: 0;
     width: 100%;
@@ -496,10 +496,10 @@ input.error, .errorMMyy {
 						width:30%;
 					}
 					.phone-block{
-						width: 70%;
+						width: 66%;
 						input{
 							.in-block;
-							width:30% !important;
+							width:32% !important;
 						}
 					}
 					.delivery-instructions{
@@ -1192,7 +1192,7 @@ input.error, .errorMMyy {
 					  }
 					  .phone-book{
 					     input{
-					     	width:32%;
+					     	width:32.5%;
 					     	margin-bottom:20px;
 					     }
 					     label{
