--- a/src/app/checkout/templates/checkout.top.tpl.html
+++ b/src/app/checkout/templates/checkout.top.tpl.html
@@ -5,7 +5,7 @@
             <div class="logo">
                 <a href="#" ui-sref="home" ng-include="checkout.logo"></a>
             </div>
-            <div class="returnbtn" ui-sref="buildOrder({ID:checkout.seluser,SearchType:'User',showOrdersummary: true})">
+            <div class="returnbtn" ui-sref="buildOrder({ID:checkout.order.FromUserID,SearchType:'User',showOrdersummary: true})">
 		    	<a>
 					<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 						 viewBox="-27.9 72.8 42 28" style="enable-background:new -27.9 72.8 42 28;" xml:space="preserve">
