--- a/src/app/orderHistory/templates/orderHistory.tpl.html
+++ b/src/app/orderHistory/templates/orderHistory.tpl.html
@@ -1,4 +1,7 @@
 <div class="container-fluid order-history-main">
+	<div class="back-common">
+		<a href="javascript: window.history.go(-1)">Back</a>
+	</div>
 	<div class="order-history" ng-if="orderHistory.order.length>0">
 		<h5>
 			<span class="order-header">Order History for:</span> {{uname}}
