--- a/src/app/addressBook/less/addressBook.less
+++ b/src/app/addressBook/less/addressBook.less
@@ -1,7 +1,7 @@
 .container-fluid.addressBook-main{
 	position: absolute;
     top:0;
-    bottom: 30px;
+    bottom: 0px;
     overflow-x: hidden;
     overflow-y: auto;
 	padding:0 30px;
@@ -11,11 +11,22 @@
 		.font-spacing;
 	}
 	input.error, .errorCity {
-		border: 1px solid red !important;
+		border: 1px solid #f32929 !important;
 	}
 	.addressBook-container{
 		padding: 15px 0px 35px 0px;
 		.addressBook{
+			.back-common{
+				padding:0;
+				margin:0 0 14px 0;
+				
+				a{
+					&:hover{
+						color:@color0;
+					}
+					text-decoration:none;
+				}
+			}
 			h1{
 				font-size:18px;
 				line-height:38px;
@@ -89,6 +100,12 @@
 					div{
 
 					}
+				}
+				span.addrerror{
+					color: #f00;
+					margin-top: 20px;
+					display: inline-block;
+					font-size:12px;
 				}
 				.addr-cont{
 				  div{
@@ -297,5 +314,58 @@
 				}
 			}
 		}
+	}	
+		.edit-address-main, .add-new-main{
+		.form-control{
+				padding:5px 5px;
+				height:35px;
+				cursor:pointer;
+				background-color:#f4f4f4;
+				border:1px solid #eaeaea;
+				i {
+					color:@primary-dark-color;
+					float:right;
+					font-size:12px;
+					padding: 6px 0;
+					.transition-common(all 0.5s ease);
+					.rotate(0deg);
+				}
+				.dropdown-menu{
+					width:100%;
+					padding:0;
+					border:1px solid @base-bg-purple-light;
+					border-radius:0;
+					li{
+						border-bottom:1px solid @color21;
+						border-radius:0;
+						
+						a{
+							text-decoration:none;
+							height:30px;
+							line-height:26px;
+							font-size:13px;
+							padding: 5px 10px;
+							.helvetica-regular;
+							color:@color1;
+							text-decoration:none;
+							overflow: hidden;
+							white-space: nowrap;
+							text-overflow: ellipsis;
+							&:hover{
+								background-color:@base-bg-purple-light;
+								color:@color0 !important;
+							}
+						}
+					}
+					&:last-child{
+						border-bottom:none;
+					}
+				}
+				&.open{
+					.fa-chevron-down{
+						.rotate(180deg);
+					}
+				}
+		}
 	}
-}
+}	
