--- a/src/app/base/templates/base.down.tpl.html
+++ b/src/app/base/templates/base.down.tpl.html
@@ -17,14 +17,13 @@
 	</ul>
 	<p>© 2016 Bachman's, Inc.</p>
 </div>
-<div class="container-fluid order-claim-page footer" ng-hide="application.orderclaimfooterstat">
+<!-- <div class="container-fluid order-claim-page footer" ng-hide="application.orderclaimfooterstat">
 	<div class="claim-edit">
 		<div class="cancel-claim">Cancel Claim</div>
-		<!-- <div class="continue-claim" ng-click="orderClaim.orderclaimarr==null || orderClaim.completeclaim(orderClaim.orderID)" ng-disabled="orderClaim.orderclaimarr==null" ng-class="{disabled: orderClaim.orderclaimarr==null}">Complete Claim</div> -->
-		<div class="continue-claim" ng-hide="orderClaim.orderclaimsummaryshow" ng-click="orderClaim.orderclaimarr==null || orderClaim.continueclaim()" ng-disabled="orderClaim.orderclaimarr==null" ng-class="{disabled: orderClaim.orderclaimarr==null}">Continue</div>
+		<div class="continue-claim" ng-hide="orderClaim.orderclaimsummaryshow" ng-click="orderClaim.orderclaimarr==null || orderClaim.continueclaim()" ng-disabled="orderClaim.orderclaimarr==null">Continue</div>
 		<div class="continue-claim" ng-show="orderClaim.orderclaimsummaryshow" ng-click="orderClaim.completeclaim(orderClaim.orderID)">Complete Claim</div>
 	</div>
-</div>
+</div> -->
 <!-- <div class="build-order-footer" ng-show="application.headerstat">
 	<div class="cancel-order">
 		<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
