--- a/src/app/checkout/templates/checkout.bottom.tpl.html
+++ b/src/app/checkout/templates/checkout.bottom.tpl.html
@@ -2,12 +2,12 @@
 	<div class="cancel-order">
 		<h5 ng-click="cancelOrder()">Cancel Order</h5>
 	</div>
-	<div class="save-later" ng-click="vm.saveLaterPopup()">
+	<div class="save-later" ng-click="checkout.saveLaterPopup()">
 		<h5>Save For Later</h5>
 	</div>
-	<modalr title="Save Order For Later" visible="vm.showModal" id="mymodal">
-		Save Order as:<br/>
+	<modalr title="Save Order For Later" visible="checkout.showModal" id="mymodal">
+		Save Order As<span class="star">*</span>:<br/>
 		<input type="text" ng-model="saveOrderTxt" /><br/>
-		<input type="button" ng-click="saveForLater(saveOrderTxt)" value="SAVE" />
+		<input type="button" ng-click="saveForLater(saveOrderTxt)" ng-disabled="!saveOrderTxt" value="SAVE" />
 	</modalr>
 </div>
