--- a/src/app/home/templates/home.tpl.html
+++ b/src/app/home/templates/home.tpl.html
@@ -66,7 +66,7 @@
 					</div>
 			</div>
 		</div>
-		<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 view-cal">
+		<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 view-cal" ng-if="home.promotionsList.length > 5">
 			<a ng-click="viewpromotions()">View All</a>
 		</div>
 		<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 view-cal">
