--- a/src/app/orderClaim/less/orderClaim.less
+++ b/src/app/orderClaim/less/orderClaim.less
@@ -1,11 +1,24 @@
+main:not(.build-order).orderclaim{
+	bottom:0;
+}
 .container-fluid.order-claim-page{
-	padding:0px 0 0 0;
+	padding:5px 0 0 0;
 	.helvetica-regular;
 	background:#fff;
+	.back-common{
+		margin:14px 0 14px 30px;
+		a{
+			color:@color0;
+			text-decoration:none;
+			&:hover{
+				color:@color0;
+			}
+		}
+	}
 	.order-claim-container{
 		position:absolute;
 		top:0px;
-		bottom:0px;
+		bottom:30px;
 		width:100%;
 		overflow-x:hidden;
 		overflow-y:auto;
@@ -84,10 +97,12 @@
 					padding-right:0;
 				    width: 22%;
 				 	.product-img{
-			    	 background: #ccc;
-			   		 height: 130px;
-			    	 width: 100px;
-				    }
+						padding:0;
+						width: 100px;
+							img{
+								max-width:100%;
+							}
+					}
 			}
 			.pro-details{
 				   p{
@@ -221,18 +236,31 @@
 			float: left;
 			padding: 5px 40px;
 			border-right: 1px solid #fff;
+			background: #969292;
+			cursor: pointer;
 			.background-fade;
 			&:hover{
 				background-color:@primary-dark-color;
 			}
+			a {
+				color: #fff;
+				text-decoration: none;
+			}
 		}
 	.continue-claim{
-		 background: #969292;
+		background: #969292;
 		float: right;
 		padding: 5px 80px;
 		.background-fade;
 		&:hover{
 			background-color:@primary-dark-color;
+		}
+		&.disabled {
+			background: #969292;
+			cursor: not-allowed;
+			&:hover {
+				background: #969292;
+			}
 		}
 	}
 }
@@ -241,6 +269,7 @@
 	font-size:14px;
 	margin-bottom: 20px;
 	margin-right: 16px;
+	width:180px;
 	h3{
 		margin:0px 0 10px 0;
 		font-size:20px;
@@ -255,6 +284,37 @@
 		span:first-child{
 		  width:69%;
 		  float:left;
+		}
+	}
+}
+#orderclaimfooter .footer{
+	position: fixed;
+}
+.orderClaimPopup {
+	text-align: center;
+	h4 {
+		.helvetica-bold;
+		font-size: 20px;
+		margin: 20px 0 30px;
+	}
+	p {
+		margin: 15px 0;
+		.helvetica-regular;
+		font-size: 16px;
+	}
+	button {
+		.helvetica-bold;
+		margin: 15px 0;
+		padding: 5px 20px;
+		background-color:@primary-color;
+		color: #fff;
+		&:hover {
+			background-color:@primary-dark-color;
+		}
+		&:disabled:hover {
+			background-color:@primary-color;
+			cursor: not-allowed;
+			opacity: 0.6;
 		}
 	}
 }
