--- a/src/app/orderConfirmation/less/orderConfirmation.less
+++ b/src/app/orderConfirmation/less/orderConfirmation.less
@@ -1,8 +1,60 @@
+.checkoutHeader{
+		 .logo{
+		 	    float: left;
+               width: 17%;
+               a{
+               	display: inline-table;
+			    float: left;
+			    margin: 10px auto;
+			    height: 54px;
+			     svg{
+			     	height: 50px;
+			     }
+               }
+		 }
+		 .returnbtn{
+		 	width: 220px;
+    		display: inline-block;
+    		 a{
+    		 	    height: 40px;
+				    font-family: "Helvetica-regular";
+				    font-size: 21px;
+				    padding: 9px 0px 0 10px;
+				    margin: 16px 0 0 20px;
+				    color: #ffffff;
+				    display: block;
+				    text-decoration:none;
+				     svg{
+				     	  fill: #ffffff;
+                          width: 20px;
+				     }
+    		  }
+			}
+			.pagetitle{
+				position: absolute;
+			    left: 0;
+			    right: 0;
+			    margin: auto;
+			    display: inline-block;
+			    text-align: center;
+			    color: #fff;
+			    z-index: -1;
+			    h2{
+			    	    display: inline-block;
+					    font-family: "Helvetica-Bold";
+					    font-size: 28px;
+					    margin-top: 24px
+			    }
+			}
+	    }
+
 .container-fluid.orderConfirmation-Wrap{
 	padding:0;
 	.orderConfirm{
 		width: 80%;
 	    position: absolute;
+
+	    
 	    top: 50%;
 	    left: 0;
 	    right: 0;
